data/objects/User.object
<CustomObject>
    <fields>
        <fullName>cadmus_una__Always_Move_Folder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Move Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cadmus_una__Collab_GD_Access_Token__c</fullName>
        <label>Google Drive Access Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_una__Collab_GD_Redirect_URL__c</fullName>
        <label>Google Drive Redirect URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_una__Collab_GD_Refresh_Token__c</fullName>
        <label>Google Drive Refresh Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_una__Collab_SP_Access_Token__c</fullName>
        <label>SharePoint Access Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_una__Collab_SP_Code_Verifier__c</fullName>
        <label>SP Code Verifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_una__Collab_SP_Redirect_URL__c</fullName>
        <label>SharePoint Redirect URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_una__Collab_SP_Refresh_Token__c</fullName>
        <label>SharePoint Refresh Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vsa__eValuePrompter_Access__c</fullName>
        <label>eValuePrompter Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ValueSelling_Admin_User</fullName>
                    <label>Admin</label>
                </value>
                <value>
                    <fullName>ValueSelling_ValuePrompter_Standard_User</fullName>
                    <label>eValuePrompter Read Write</label>
                </value>
                <value>
                    <fullName>ValueSelling_ValuePrompter_Read_Only</fullName>
                    <label>eValuePrompter Read Only</label>
                </value>
                <value>
                    <fullName>ValueSelling_Account_Plan_Standard_User</fullName>
                    <label>Account Plan Read Write</label>
                </value>
                <value>
                    <fullName>ValueSelling_Account_Plan_Read_Only</fullName>
                    <label>Account Plan Read Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Users_with_Unverified_Email</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>HAS_USER_VERIFIED_EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAS_USER_VERIFIED_EMAIL</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Users with Unverified Email</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>